# mx-chainlink-sc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: actions.yml  release.yml
aggregator/: Cargo.toml
aggregator/meta/: Cargo.toml
aggregator/meta/src/: main.rs
aggregator/src/: aggregator_data.rs  aggregator_interface.rs  lib.rs  median.rs
aggregator/wasm/: Cargo.toml
aggregator/wasm/src/: lib.rs
client/: Cargo.toml
client/mandos/: client-request.scen.json  init.scen.json
client/meta/: Cargo.toml
client/meta/src/: main.rs
client/src/: client_data.rs  lib.rs
client/wasm/: Cargo.toml
client/wasm/src/: lib.rs
elrond-adapter/: .gitignore  README.md  go.mod  go.sum  main.go
elrond-adapter/adapter/: adapter.go  webServer.go
elrond-adapter/aggregator/: binance.go  binance_test.go  bitfinex.go  bitfinex_test.go  cryptocom.go  cryptocom_test.go  errors.go  exchange.go  exchange_test.go  gemini.go  gemini_test.go  hitbtc.go  hitbtc_test.go  huobi.go  huobi_test.go  kraken.go  kraken_test.go  okex.go  okex_test.go  utils.go  utils_test.go
elrond-adapter/config/: cl_job_spec.json  config.go  config.toml
elrond-adapter/config/exampleSpecs/: gweiDenominationJob.json  priceFeedJob.json
elrond-adapter/data/: models.go
elrond-adapter/gasStation/: ethGas.go  ethGas_test.go
elrond-adapter/interaction/: interactor.go  utils.go
exchange/: Cargo.toml
exchange/meta/: Cargo.toml
exchange/meta/src/: main.rs
exchange/src/: lib.rs
exchange/wasm/: Cargo.toml
exchange/wasm/src/: lib.rs
interaction/: config.toml  local-testnet.snippets.sh
mandos/: aggregator.scen.json  client-request.scen.json  init-price-aggregator.scen.json  init.scen.json  price-aggregator-balance.scen.json  price-aggregator-pause.scen.json  price-aggregator.scen.json
module-test/: Cargo.toml
module-test/meta/: Cargo.toml
module-test/meta/src/: main.rs
module-test/src/: lib.rs
module-test/wasm/: Cargo.toml
module-test/wasm/src/: lib.rs
oracle/: Cargo.toml
oracle/meta/: Cargo.toml
oracle/meta/src/: main.rs
oracle/src/: lib.rs  oracle_data.rs  oracle_request.rs
oracle/wasm/: Cargo.toml
oracle/wasm/src/: lib.rs
price-aggregator/: Cargo.toml  README.md
price-aggregator/meta/: Cargo.toml
price-aggregator/meta/src/: main.rs
price-aggregator/src/: lib.rs  median.rs  price_aggregator_data.rs  staking.rs
price-aggregator/wasm/: Cargo.toml
price-aggregator/wasm/src/: lib.rs
proxy-modules/: Cargo.toml
proxy-modules/price-aggregator-proxy/: Cargo.toml  import-help.txt
proxy-modules/price-aggregator-proxy/src/: lib.rs
proxy-modules/price_oracle/: Cargo.toml
proxy-modules/price_oracle/src/: price_aggregator.rs
tests/: formatting_tests.rs  mandos_tests.rs  median_tests.rs  price_agg_tests.rs
tests/price_agg_setup/: mod.rs
