[package]
name = "chainlink-tests"
version = "0.0.1"
authors = [ "Claudiu-Marcel Bruda <claudiu.bruda@elrond.com>",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.client]
path = "client"

[dependencies.oracle]
path = "oracle"

[dependencies.aggregator]
path = "aggregator"

[dependencies.exchange]
path = "exchange"

[dependencies.price-aggregator]
path = "price-aggregator"

[dependencies.elrond-wasm]
version = "0.22.10"

[dev-dependencies.elrond-wasm-debug]
version = "0.22.10"
