[package]
name = "chainlink-tests"
version = "0.0.0"
authors = ["Claudiu-Marcel Bruda <claudiu.bruda@elrond.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.client]
path = "client"

[dependencies.oracle]
path = "oracle"

[dependencies.aggregator]
path = "aggregator"

[dependencies.exchange]
path = "exchange"

[dependencies.price-aggregator]
path = "price-aggregator"

[dependencies.multiversx-sc]
version = "0.45.2"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.45.2"

[dev-dependencies.multiversx-sc-modules]
version = "0.45.2"
