[package]
name = "client"
version = "0.0.0"
authors = ["Claudiu-Marcel Bruda <claudiu.bruda@elrond.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.oracle]
path = "../oracle"

[dependencies.multiversx-sc]
version = "0.45.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.45.2"
