[package]
name = "exchange"
version = "0.0.1"
authors = [ "Claudiu-Marcel Bruda <claudiu.bruda@elrond.com>",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.aggregator]
path = "../aggregator"
default-features = false

[dependencies.elrond-wasm]
version = "0.17.0"
path="../../elrond-wasm-rs/elrond-wasm"

[dependencies.elrond-wasm-derive]
version = "0.17.0"
path="../../elrond-wasm-rs/elrond-wasm-derive"

[dependencies.elrond-wasm-node]
version = "0.17.0"
optional = true
path="../../elrond-wasm-rs/elrond-wasm-node"

[dev-dependencies.elrond-wasm-debug]
version = "0.17.0"
path="../../elrond-wasm-rs/elrond-wasm-debug"
