[package]
name = "module-test"
version = "0.0.0"
authors = ["Dorin Marian Iancu <dorin.iancu@elrond.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "0.34.0"

[dependencies.elrond-wasm-derive]
version = "0.34.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.34.0"

[dependencies.price-aggregator-proxy]
version = "0.0.0"
path = "../proxy-modules/price-aggregator-proxy"
