[package]
name = "oracle"
version = "0.0.0"
authors = [ "Claudiu-Marcel Bruda <claudiu.bruda@elrond.com>",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.elrond-wasm]
version = "0.10.4"

[dependencies.elrond-wasm-derive]
version = "0.10.4"

[dependencies.elrond-wasm-node]
version = "0.10.4"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.10.4"
