[package]
name = "oracle"
version = "0.0.1"
authors = [ "Claudiu-Marcel Bruda <claudiu.bruda@elrond.com>",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.aggregator]
path = "../aggregator"
default-features = false

[dependencies.elrond-wasm]
version = "0.31.1"

[dev-dependencies.elrond-wasm-debug]
version = "0.31.1"
