[package]
name = "price-aggregator"
version = "0.0.1"
authors = [ "Claudiu-Marcel Bruda <claudiu.bruda@elrond.com>",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "0.30.0"

[dependencies]
arrayvec = { version = "0.7.1", default-features = false }

[dev-dependencies.elrond-wasm-debug]
version = "0.30.0"
