[package]
name = "price-aggregator"
version = "0.0.0"
authors = ["Claudiu-Marcel Bruda <claudiu.bruda@elrond.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.45.2"

[dependencies.multiversx-sc-modules]
version = "0.45.2"

[dependencies.arrayvec]
version = "0.7.1"
default-features = false

[dev-dependencies.multiversx-sc-scenario]
version = "0.45.2"
