[package]
name = "aggregator-wasm"
version = "0.0.0"
authors = [ "Claudiu-Marcel Bruda <claudiu.bruda@elrond.com>",]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.aggregator]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.22.8"

[dependencies.elrond-wasm-output]
version = "0.22.8"
features = ["wasm-output-mode"]

[workspace]
members = ["."]
