[package]
name = "price-aggregator-proxy"
version = "0.0.0"
authors = [ "",]
edition = "2018"

[features]
wasm-output-mode = ["elrond-wasm-node"]

[dependencies.elrond-wasm]
version = "0.21.2"

[dependencies.elrond-wasm-derive]
version = "0.21.2"

[dependencies.elrond-wasm-node]
version = "0.21.2"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.21.2"
